[package]
name = "rok"
version = "0.1.0"
authors = ["Jancd <sergeychang@gmail.com>"]
edition = "2018"

[features]
default = []
tls = ["tokio-rustls"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
futures-util = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "http2", "stream"] }
lazy_static = "1.4"
mime = "0.3"
rand = "0.8"
route-recognizer = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
tokio = "1.0"
tokio-rustls = { version = "0.22", optional = true }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "hello"
path = "examples/hello.rs"